[metadata]
name = speconed
version = 0.0dev0
author = Jan-Torge Schindler
author_email = schindler@strw.leidenuniv.nl
description = A lightweight package for the manipulation of 1-D astronomical specta
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/jtschindler/speconed
project_urls =
    Bug Tracker = https://github.com/jtschindler/speconed/issues
license = BSD-3-Clause
keywords =
    spectroscopy
    astronomy
    science
    python
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics


[options]
packages = find:
python_requires = >=3.9
install_requires =
    numpy
    scipy
    pandas
    h5py
    extinction
    spectres
    astropy
    matplotlib
    tables
    notebook
    nbsphinx
    nbsphinx-link
    sphinx-rtd-theme

requirement_files =
    requirements.txt

[options.packages.find]
exclude =
    examples
